Fixed logo size and alignment in navbar, fixed button size in work

--- a/components/layout/MainNavigation.module.css
+++ b/components/layout/MainNavigation.module.css
@@ -26,10 +26,17 @@
     display: none;
 }
 
+.logoContainer{
+    height: 100%;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
 .logo{
     cursor: pointer;
     object-fit: contain;
-    transform: scale(.8);
+    transform: scale(.7);
 }
 
 .rightSideContainer{
